--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Test and Lint
+name: Test
 
 on:
   push:
@@ -19,17 +19,4 @@ jobs:
       - name: Run test
         run: flutter test
 
-  lint:
-    name: Run lint
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up Flutter
-        uses: subosito/flutter-action@v2
-        with:
-        #  flutter-version: '3.3.10'
-          channel: 'stable'
-      - name: Run pub get
-        run: flutter pub get
-      - name: Run analyze
-        run: flutter analyze
+  
